# Utils

./: Aobi.h  NNPack_Convolution.cpp  New_Meta.h  README.md  Sqlite_Util.h  V4L2Camera.cpp  Viewer.cpp  correct.cpp  eiginpack.cpp  encrtype.h  thinkjoy_utils.h
AoBiWork/: Convert.cpp
AoBiWork/Correct/: correct.cpp
AoBiWork/collect/: Viewer.cpp
Blog/_posts/: C++11_Move_Forward.md  Gvim_For_G++.md  Onvif_GenarateFrameCode.md  TSCP_ch2.md  TSCP_ch3.md  setup_ubuntu.md
Database/: dump.sql
Eigen/: eiginpack.cpp
FaceService/: ConsJson.h  Run.cpp
Libraries/OpenSSL/Windows/lib64/: libcrypto.lib  libssl.lib
Linux/: device_operate.h
Script/CPP/: CMakeLists.txt  build.sh
Script/NDK/: Android.mk  Application.mk
Script/NDK/Authorization/: Interface.cpp  ThinkjoySDK.cpp  jnipack.cpp
Socket/: socketpack.cpp
Tinyxml2/: xmlpack.cpp
_posts/: C++11_Regex.md  Cpp_norm.md  Gvim_vumdle.md  Trace_return_type.md  delete_ubuntu.md  memory_align.md
protobuf/: get_check_sum.py
